Default-tier feature work + simplification/hardening pass
Bundles the prior-session language-feature/bugfix work with a
codebase simplification and input-hardening pass (no architecture
rewrite, no feature removal, no user-visible behavior change).

Language features / fixes:
- Hover shows inferred type for `var` locals and Java 21 pattern
  bindings (guarded/record patterns, `instanceof` bindings), with
  semantic highlighting, go-to-def, references, rename, completion.
- Method references (`Map.Entry::getKey`) highlight the method;
  nested-type qualifiers no longer mis-flagged as missing fields.
- Cross-file enums expose constants, implicit `java.lang.Enum`
  members, and synthesized `values()`/`valueOf`; enhanced-for `var`
  binds the element type; package-private members visible in-project;
  Object-erased generic chains no longer false-flag members.
- JDK auto-detection ranks by real feature version (release file),
  scanning per-user macOS/JetBrains/SDKMAN locations; javac compiles
  at the detected source level with --enable-preview.
- `Install Dependencies (runs build tool)` command (trusted only,
  explicit per-run consent); build-tool discovery probes common
  install dirs for GUI-launched editors.

Simplification / hardening:
- Bounded input handling: ZIP central-directory size + entry-count
  caps before allocation; max size for unopened project files before
  read/cache; per-file oversize guard in the reference prefilter,
  routed into the existing incompleteness signals so rename refuses
  when completeness cannot be guaranteed.
- Consolidated workspace traversal into a single `fs_scan` facility
  shared by the workspace index and references (boundary, exclusions,
  symlink escape/cycle, cancellation, caps, truncation preserved;
  references still fresh-scans, not the cached index).
- Shared reference/implementation candidate loading; reference and
  implementation confirmation kept separate.
- Split the oversized server `main.rs` into topical modules